tests/snapshots/derivative_golden__golden_bccg.snap
---
source: tests/derivative_golden.rs
expression: "golden(&BCCG::new(), &y, &owned)"
---
family: BCCG
y:
  - "5.0000000000e-1"
  - "1.0000000000e0"
  - "1.8000000000e0"
  - "3.0000000000e0"
  - "7.5000000000e-1"
  - "2.2000000000e0"
params:
  mu:
    - "1.0000000000e0"
    - "1.2000000000e0"
    - "2.0000000000e0"
    - "2.5000000000e0"
    - "8.0000000000e-1"
    - "2.0000000000e0"
  nu:
    - "-1.0000000000e0"
    - "-5.0000000000e-1"
    - "0.0000000000e0"
    - "5.0000000000e-1"
    - "1.0000000000e0"
    - "2.0000000000e0"
  sigma:
    - "2.0000000000e-1"
    - "3.0000000000e-1"
    - "1.5000000000e-1"
    - "4.0000000000e-1"
    - "2.5000000000e-1"
    - "3.5000000000e-1"
scores:
  mu:
    - "-4.9000000000e1"
    - "-1.8234418887e0"
    - "-4.6826895848e0"
    - "8.0693606237e-1"
    - "-1.9375000000e0"
    - "-9.6285714286e-1"
  nu:
    - "8.9642118474e0"
    - "-1.4485180377e-1"
    - "-7.9369625807e-2"
    - "1.6124482072e-1"
    - "-6.2543384704e-2"
    - "9.0885043706e-2"
  sigma:
    - "2.4000000000e1"
    - "-5.9512133425e-1"
    - "-5.0662941068e-1"
    - "-7.7225575052e-1"
    - "-9.3750000000e-1"
    - "-9.1000000000e-1"
weights:
  mu:
    - "2.7000000000e1"
    - "1.1611111111e1"
    - "4.4444444444e1"
    - "6.7500000000e0"
    - "1.8000000000e1"
    - "1.6163265306e1"
  nu:
    - "7.0000000000e-2"
    - "1.5750000000e-1"
    - "3.9375000000e-2"
    - "2.8000000000e-1"
    - "1.0937500000e-1"
    - "2.1437500000e-1"
  sigma:
    - "2.0000000000e0"
    - "2.0000000000e0"
    - "2.0000000000e0"
    - "2.0000000000e0"
    - "2.0000000000e0"
    - "2.0000000000e0"
