tests/snapshots/derivative_golden__golden_bcpe.snap
---
source: tests/derivative_golden.rs
expression: "golden(&BCPE::new(), &y, &owned)"
---
family: BCPE
y:
  - "5.0000000000e-1"
  - "1.0000000000e0"
  - "1.8000000000e0"
  - "3.0000000000e0"
  - "7.5000000000e-1"
  - "2.2000000000e0"
params:
  mu:
    - "1.0000000000e0"
    - "1.2000000000e0"
    - "2.0000000000e0"
    - "2.5000000000e0"
    - "8.0000000000e-1"
    - "2.0000000000e0"
  nu:
    - "-1.0000000000e0"
    - "-5.0000000000e-1"
    - "0.0000000000e0"
    - "5.0000000000e-1"
    - "1.0000000000e0"
    - "2.0000000000e0"
  sigma:
    - "2.0000000000e-1"
    - "3.0000000000e-1"
    - "1.5000000000e-1"
    - "4.0000000000e-1"
    - "2.5000000000e-1"
    - "3.5000000000e-1"
  tau:
    - "1.0000000000e0"
    - "1.5000000000e0"
    - "2.0000000000e0"
    - "3.0000000000e0"
    - "8.0000000000e-1"
    - "4.0000000000e0"
scores:
  mu:
    - "-1.3142135624e1"
    - "-2.9805628618e0"
    - "-4.6826895848e0"
    - "-7.3268028337e-2"
    - "-8.4626167755e0"
    - "-1.9573473006e0"
  nu:
    - "2.0383664423e0"
    - "-1.2619111021e-1"
    - "-7.9369625807e-2"
    - "1.7543972271e-1"
    - "-4.8656986612e-2"
    - "9.5128195231e-2"
  sigma:
    - "6.0710678119e0"
    - "-3.9348358381e-1"
    - "-5.0662941068e-1"
    - "-9.2563847964e-1"
    - "-5.0249221497e-1"
    - "-9.9629873269e-1"
  tau:
    - "-3.2527185084e0"
    - "1.4804629052e-1"
    - "1.0095790063e-1"
    - "-1.6840442954e-1"
    - "-1.7450954721e-1"
    - "-1.7118484173e-1"
weights:
  mu:
    - "5.2000000000e1"
    - "1.2674987385e1"
    - "4.4444444444e1"
    - "7.5755835045e0"
    - "6.9554982542e1"
    - "1.9190528515e1"
  nu:
    - "1.4000000000e-1"
    - "1.7258044618e-1"
    - "3.9375000000e-2"
    - "3.1698614100e-1"
    - "4.6180163847e-1"
    - "2.9387376993e-1"
  sigma:
    - "1.0000000000e0"
    - "1.5000000000e0"
    - "2.0000000000e0"
    - "3.0000000000e0"
    - "8.0000000000e-1"
    - "4.0000000000e0"
  tau:
    - "3.5236813376e-1"
    - "2.4593169239e-1"
    - "2.0110165042e-1"
    - "1.6298129629e-1"
    - "4.4150877395e-1"
    - "1.4484538544e-1"
