tests/snapshots/derivative_golden__golden_bct.snap
---
source: tests/derivative_golden.rs
expression: "golden(&BCT::new(), &y, &owned)"
---
family: BCT
y:
  - "5.0000000000e-1"
  - "1.0000000000e0"
  - "1.8000000000e0"
  - "3.0000000000e0"
  - "7.5000000000e-1"
  - "2.2000000000e0"
params:
  mu:
    - "1.0000000000e0"
    - "1.2000000000e0"
    - "2.0000000000e0"
    - "2.5000000000e0"
    - "8.0000000000e-1"
    - "2.0000000000e0"
  nu:
    - "-1.0000000000e0"
    - "-5.0000000000e-1"
    - "0.0000000000e0"
    - "5.0000000000e-1"
    - "1.0000000000e0"
    - "2.0000000000e0"
  sigma:
    - "2.0000000000e-1"
    - "3.0000000000e-1"
    - "1.5000000000e-1"
    - "4.0000000000e-1"
    - "2.5000000000e-1"
    - "3.5000000000e-1"
  tau:
    - "3.0000000000e0"
    - "5.0000000000e0"
    - "8.0000000000e0"
    - "4.0000000000e0"
    - "1.2000000000e1"
    - "6.0000000000e0"
scores:
  mu:
    - "-6.1428571429e0"
    - "-2.0792718383e0"
    - "-4.9620119386e0"
    - "1.0456659453e0"
    - "-2.0103626943e0"
    - "-8.0788177340e-1"
  nu:
    - "6.8647553773e-1"
    - "-1.4072607759e-1"
    - "-7.7819269671e-2"
    - "1.5739486441e-1"
    - "-6.2388322287e-2"
    - "9.0223816473e-2"
  sigma:
    - "2.5714285714e0"
    - "-5.5054088265e-1"
    - "-4.7719986345e-1"
    - "-7.3065512476e-1"
    - "-9.3264248705e-1"
    - "-8.9655172414e-1"
  tau:
    - "-1.4852325049e0"
    - "7.9138570096e-2"
    - "5.3035552611e-2"
    - "8.4668618026e-2"
    - "2.3271827023e-2"
    - "4.8175217090e-2"
weights:
  mu:
    - "1.8666666667e1"
    - "8.8333333333e0"
    - "3.6363636364e1"
    - "4.9642857143e0"
    - "1.5866666667e1"
    - "1.4349206349e1"
  nu:
    - "4.6666666667e-2"
    - "1.1812500000e-1"
    - "3.2215909091e-2"
    - "2.0000000000e-1"
    - "9.4791666667e-2"
    - "1.6673611111e-1"
  sigma:
    - "1.0000000000e0"
    - "1.2500000000e0"
    - "1.4545454545e0"
    - "1.1428571429e0"
    - "1.6000000000e0"
    - "1.3333333333e0"
  tau:
    - "2.9022033008e0"
    - "3.9297313911e0"
    - "5.4504545322e0"
    - "3.4183052430e0"
    - "7.4644600430e0"
    - "4.4383296540e0"
