tests/snapshots/derivative_golden__golden_beta.snap
---
source: tests/derivative_golden.rs
expression: "golden(&Beta::new(), &y, &owned)"
---
family: Beta
y:
  - "1.0000000000e-1"
  - "2.5000000000e-1"
  - "5.0000000000e-1"
  - "7.5000000000e-1"
  - "9.0000000000e-1"
  - "4.0000000000e-1"
params:
  mu:
    - "2.0000000000e-1"
    - "3.0000000000e-1"
    - "5.0000000000e-1"
    - "7.0000000000e-1"
    - "8.5000000000e-1"
    - "4.5000000000e-1"
  phi:
    - "2.0000000000e0"
    - "5.0000000000e0"
    - "1.0000000000e1"
    - "3.0000000000e0"
    - "8.0000000000e0"
    - "4.0000000000e0"
scores:
  mu:
    - "1.5686637441e-1"
    - "-3.3542903102e-2"
    - "0.0000000000e0"
    - "-8.9239896874e-2"
    - "6.7921609850e-2"
    - "-1.4470147361e-1"
  phi:
    - "5.7883570134e-1"
    - "5.2847634367e-1"
    - "5.2487740075e-1"
    - "5.7678444886e-1"
    - "4.6958098476e-1"
    - "5.4090084331e-1"
weights:
  mu:
    - "8.3289994073e-1"
    - "1.3948388522e0"
    - "2.7665369471e0"
    - "1.0039160140e0"
    - "1.4833783657e0"
    - "1.2838397512e0"
  phi:
    - "7.8190643341e-1"
    - "6.1711356952e-1"
    - "5.4951421706e-1"
    - "6.7907192122e-1"
    - "6.2865961705e-1"
    - "6.1962347652e-1"
