tests/snapshots/derivative_golden__golden_binomial.snap
---
source: tests/derivative_golden.rs
expression: "golden(&Binomial::new(10), &y, &owned)"
---
family: Binomial
y:
  - "0.0000000000e0"
  - "1.0000000000e0"
  - "5.0000000000e0"
  - "9.0000000000e0"
  - "1.0000000000e1"
  - "3.0000000000e0"
params:
  mu:
    - "1.0000000000e-1"
    - "2.0000000000e-1"
    - "5.0000000000e-1"
    - "8.5000000000e-1"
    - "9.5000000000e-1"
    - "4.0000000000e-1"
scores:
  mu:
    - "-1.0000000000e0"
    - "-1.0000000000e0"
    - "0.0000000000e0"
    - "5.0000000000e-1"
    - "5.0000000000e-1"
    - "-1.0000000000e0"
weights:
  mu:
    - "9.0000000000e-1"
    - "1.6000000000e0"
    - "2.5000000000e0"
    - "1.2750000000e0"
    - "4.7500000000e-1"
    - "2.4000000000e0"
