tests/snapshots/derivative_golden__golden_censored_all_statuses.snap
---
source: tests/derivative_golden.rs
expression: "golden(&family, &y, &owned)"
---
family: Censored
y:
  - "-1.0000000000e0"
  - "0.0000000000e0"
  - "5.0000000000e-1"
  - "1.5000000000e0"
  - "2.0000000000e0"
  - "3.0000000000e0"
params:
  mu:
    - "0.0000000000e0"
    - "2.5000000000e-1"
    - "5.0000000000e-1"
    - "1.0000000000e0"
    - "1.5000000000e0"
    - "2.0000000000e0"
  sigma:
    - "1.0000000000e0"
    - "1.2000000000e0"
    - "8.0000000000e-1"
    - "1.5000000000e0"
    - "1.0000000000e0"
    - "9.0000000000e-1"
scores:
  mu:
    - "-1.0000000000e0"
    - "5.5846560527e-1"
    - "-9.9735570100e-1"
    - "4.2827780395e-1"
    - "5.0000000000e-1"
    - "1.7942538100e0"
  sigma:
    - "0.0000000000e0"
    - "-1.3961640132e-1"
    - "-0.0000000000e0"
    - "-5.5115741917e-1"
    - "-7.5000000000e-1"
    - "1.7942538100e0"
weights:
  mu:
    - "1.0000000000e0"
    - "4.0883966652e-1"
    - "9.9471839432e-1"
    - "4.2838073032e-1"
    - "1.0000000000e0"
    - "1.0042185742e0"
  sigma:
    - "2.0000000000e0"
    - "-1.1406392216e-1"
    - "0.0000000000e0"
    - "8.3425188964e-1"
    - "2.0000000000e0"
    - "2.7984723842e0"
