tests/snapshots/derivative_golden__golden_gamma.snap
---
source: tests/derivative_golden.rs
expression: "golden(&Gamma::new(), &y, &owned)"
---
family: Gamma
y:
  - "5.0000000000e-1"
  - "1.0000000000e0"
  - "2.0000000000e0"
  - "4.0000000000e0"
  - "2.5000000000e-1"
  - "3.0000000000e0"
params:
  mu:
    - "1.0000000000e0"
    - "1.5000000000e0"
    - "2.0000000000e0"
    - "3.0000000000e0"
    - "5.0000000000e-1"
    - "2.5000000000e0"
  sigma:
    - "5.0000000000e-1"
    - "8.0000000000e-1"
    - "1.0000000000e0"
    - "1.2000000000e0"
    - "3.0000000000e-1"
    - "9.0000000000e-1"
scores:
  mu:
    - "-2.0000000000e0"
    - "-5.2083333333e-1"
    - "0.0000000000e0"
    - "2.3148148148e-1"
    - "-5.5555555556e0"
    - "2.4691358025e-1"
  sigma:
    - "5.0376390297e-1"
    - "-8.7751171165e-1"
    - "-1.1544313298e0"
    - "-1.1466304827e0"
    - "3.2771716715e0"
    - "-1.0842796243e0"
weights:
  mu:
    - "4.0000000000e0"
    - "1.5625000000e0"
    - "1.0000000000e0"
    - "6.9444444444e-1"
    - "1.1111111111e1"
    - "1.2345679012e0"
  sigma:
    - "2.1646691693e0"
    - "2.3986319326e0"
    - "2.5797362675e0"
    - "2.7588785943e0"
    - "2.0599033624e0"
    - "2.4883734786e0"
