tests/snapshots/derivative_golden__golden_gaussian.snap
---
source: tests/derivative_golden.rs
expression: "golden(&Gaussian::new(), &y, &owned)"
---
family: Gaussian
y:
  - "-1.5000000000e0"
  - "0.0000000000e0"
  - "1.0000000000e0"
  - "2.5000000000e0"
  - "-2.5000000000e-1"
  - "3.0000000000e0"
params:
  mu:
    - "-5.0000000000e-1"
    - "2.5000000000e-1"
    - "5.0000000000e-1"
    - "2.0000000000e0"
    - "0.0000000000e0"
    - "2.7500000000e0"
  sigma:
    - "1.0000000000e0"
    - "1.5000000000e0"
    - "8.0000000000e-1"
    - "5.0000000000e-1"
    - "2.0000000000e0"
    - "1.2500000000e0"
scores:
  mu:
    - "-1.0000000000e0"
    - "-1.1111111111e-1"
    - "7.8125000000e-1"
    - "2.0000000000e0"
    - "-6.2500000000e-2"
    - "1.6000000000e-1"
  sigma:
    - "0.0000000000e0"
    - "-9.7222222222e-1"
    - "-6.0937500000e-1"
    - "0.0000000000e0"
    - "-9.8437500000e-1"
    - "-9.6000000000e-1"
weights:
  mu:
    - "1.0000000000e0"
    - "4.4444444444e-1"
    - "1.5625000000e0"
    - "4.0000000000e0"
    - "2.5000000000e-1"
    - "6.4000000000e-1"
  sigma:
    - "2.0000000000e0"
    - "2.0000000000e0"
    - "2.0000000000e0"
    - "2.0000000000e0"
    - "2.0000000000e0"
    - "2.0000000000e0"
