tests/snapshots/derivative_golden__golden_hurdle_over_gamma.snap
---
source: tests/derivative_golden.rs
expression: "golden(&family, &y, &owned)"
---
family: Hurdle
y:
  - "0.0000000000e0"
  - "1.0000000000e0"
  - "0.0000000000e0"
  - "2.5000000000e0"
  - "5.0000000000e-1"
  - "3.0000000000e0"
params:
  mu:
    - "1.0000000000e0"
    - "1.5000000000e0"
    - "2.0000000000e0"
    - "2.0000000000e0"
    - "1.0000000000e0"
    - "2.5000000000e0"
  sigma:
    - "5.0000000000e-1"
    - "8.0000000000e-1"
    - "1.0000000000e0"
    - "6.0000000000e-1"
    - "9.0000000000e-1"
    - "7.0000000000e-1"
  xi:
    - "2.0000000000e-1"
    - "3.0000000000e-1"
    - "5.0000000000e-1"
    - "2.5000000000e-1"
    - "4.0000000000e-1"
    - "1.5000000000e-1"
scores:
  mu:
    - "0.0000000000e0"
    - "-5.2083333333e-1"
    - "0.0000000000e0"
    - "6.9444444444e-1"
    - "-6.1728395062e-1"
    - "4.0816326531e-1"
  sigma:
    - "0.0000000000e0"
    - "-8.7751171165e-1"
    - "0.0000000000e0"
    - "-9.1006252502e-1"
    - "-6.5102348266e-1"
    - "-1.0077322205e0"
  xi:
    - "8.0000000000e-1"
    - "-3.0000000000e-1"
    - "5.0000000000e-1"
    - "-2.5000000000e-1"
    - "-4.0000000000e-1"
    - "-1.5000000000e-1"
weights:
  mu:
    - "1.0000000000e-6"
    - "1.5625000000e0"
    - "1.0000000000e-6"
    - "2.7777777778e0"
    - "1.2345679012e0"
    - "2.0408163265e0"
  sigma:
    - "1.0000000000e-6"
    - "2.3986319326e0"
    - "1.0000000000e-6"
    - "2.2342726947e0"
    - "2.4883734786e0"
    - "2.3130572509e0"
  xi:
    - "1.6000000000e-1"
    - "2.1000000000e-1"
    - "2.5000000000e-1"
    - "1.8750000000e-1"
    - "2.4000000000e-1"
    - "1.2750000000e-1"
