tests/snapshots/derivative_golden__golden_negative_binomial.snap
---
source: tests/derivative_golden.rs
expression: "golden(&NegativeBinomial::new(), &y, &owned)"
---
family: NegativeBinomial
y:
  - "0.0000000000e0"
  - "1.0000000000e0"
  - "3.0000000000e0"
  - "7.0000000000e0"
  - "1.2000000000e1"
  - "2.0000000000e0"
params:
  mu:
    - "1.0000000000e0"
    - "2.0000000000e0"
    - "3.0000000000e0"
    - "6.0000000000e0"
    - "1.0000000000e1"
    - "2.5000000000e0"
  sigma:
    - "5.0000000000e-1"
    - "8.0000000000e-1"
    - "1.0000000000e0"
    - "3.0000000000e-1"
    - "1.5000000000e0"
    - "6.0000000000e-1"
scores:
  mu:
    - "-6.6666666667e-1"
    - "-3.8461538462e-1"
    - "0.0000000000e0"
    - "3.5714285714e-1"
    - "1.2500000000e-1"
    - "-2.0000000000e-1"
  sigma:
    - "1.4426354955e-1"
    - "-1.9022607833e-1"
    - "-4.4703897221e-1"
    - "-3.4302728931e-1"
    - "-5.7141787505e-1"
    - "-2.9784878021e-1"
weights:
  mu:
    - "6.6666666667e-1"
    - "7.6923076923e-1"
    - "7.5000000000e-1"
    - "2.1428571429e0"
    - "6.2500000000e-1"
    - "1.0000000000e0"
  sigma:
    - "2.0811971729e-2"
    - "3.6185960877e-2"
    - "1.9984384268e-1"
    - "1.1766772121e-1"
    - "3.2651838793e-1"
    - "8.8713895872e-2"
