tests/snapshots/derivative_golden__golden_ocat_4_categories.snap
---
source: tests/derivative_golden.rs
expression: "golden(&Ocat::new(4), &y, &owned)"
---
family: Ocat
y:
  - "1.0000000000e0"
  - "2.0000000000e0"
  - "3.0000000000e0"
  - "4.0000000000e0"
  - "2.0000000000e0"
  - "1.0000000000e0"
params:
  delta_1:
    - "-1.0000000000e0"
    - "-1.0000000000e0"
    - "-1.0000000000e0"
    - "-1.0000000000e0"
    - "-1.0000000000e0"
    - "-1.0000000000e0"
  delta_2:
    - "1.0000000000e0"
    - "1.0000000000e0"
    - "1.0000000000e0"
    - "1.0000000000e0"
    - "1.0000000000e0"
    - "1.0000000000e0"
  delta_3:
    - "1.5000000000e0"
    - "1.5000000000e0"
    - "1.5000000000e0"
    - "1.5000000000e0"
    - "1.5000000000e0"
    - "1.5000000000e0"
  mu:
    - "-1.0000000000e0"
    - "-2.5000000000e-1"
    - "0.0000000000e0"
    - "5.0000000000e-1"
    - "1.0000000000e0"
    - "2.5000000000e-1"
scores:
  delta_1:
    - "5.0000000000e-1"
    - "1.1700219829e-1"
    - "-3.1757447619e-1"
    - "-7.3105857863e-1"
    - "6.1185565661e-1"
    - "7.7729986117e-1"
  delta_2:
    - "0.0000000000e0"
    - "1.0198002060e0"
    - "-3.1757447619e-1"
    - "-7.3105857863e-1"
    - "1.3130352855e0"
    - "0.0000000000e0"
  delta_3:
    - "0.0000000000e0"
    - "0.0000000000e0"
    - "7.0446366089e-1"
    - "-1.0965878679e0"
    - "0.0000000000e0"
    - "0.0000000000e0"
  mu:
    - "-5.0000000000e-1"
    - "-1.1700219829e-1"
    - "3.1757447619e-1"
    - "7.3105857863e-1"
    - "-6.1185565661e-1"
    - "-7.7729986117e-1"
weights:
  delta_1:
    - "2.8500978102e-1"
    - "3.0844734871e-1"
    - "3.1003745636e-1"
    - "3.0762258826e-1"
    - "2.9898481943e-1"
    - "3.0961068094e-1"
  delta_2:
    - "3.1497466843e-1"
    - "4.0816126308e-1"
    - "4.2446102180e-1"
    - "4.3095109882e-1"
    - "4.0860797773e-1"
    - "4.3187973470e-1"
  delta_3:
    - "2.0303705220e-1"
    - "3.6530026281e-1"
    - "4.3196363141e-1"
    - "5.6943496465e-1"
    - "6.8062669617e-1"
    - "5.0135267294e-1"
  mu:
    - "2.8500978102e-1"
    - "3.0844734871e-1"
    - "3.1003745636e-1"
    - "3.0762258826e-1"
    - "2.9898481943e-1"
    - "3.0961068094e-1"
