tests/snapshots/derivative_golden__golden_ocat_5_categories.snap
---
source: tests/derivative_golden.rs
expression: "golden(&Ocat::new(5), &y, &owned)"
---
family: Ocat
y:
  - "1.0000000000e0"
  - "2.0000000000e0"
  - "3.0000000000e0"
  - "4.0000000000e0"
  - "5.0000000000e0"
  - "3.0000000000e0"
params:
  delta_1:
    - "-1.5000000000e0"
    - "-1.5000000000e0"
    - "-1.5000000000e0"
    - "-1.5000000000e0"
    - "-1.5000000000e0"
    - "-1.5000000000e0"
  delta_2:
    - "1.0000000000e0"
    - "1.0000000000e0"
    - "1.0000000000e0"
    - "1.0000000000e0"
    - "1.0000000000e0"
    - "1.0000000000e0"
  delta_3:
    - "1.2500000000e0"
    - "1.2500000000e0"
    - "1.2500000000e0"
    - "1.2500000000e0"
    - "1.2500000000e0"
    - "1.2500000000e0"
  delta_4:
    - "7.5000000000e-1"
    - "7.5000000000e-1"
    - "7.5000000000e-1"
    - "7.5000000000e-1"
    - "7.5000000000e-1"
    - "7.5000000000e-1"
  mu:
    - "-1.5000000000e0"
    - "-5.0000000000e-1"
    - "0.0000000000e0"
    - "7.5000000000e-1"
    - "1.5000000000e0"
    - "2.5000000000e-1"
scores:
  delta_1:
    - "5.0000000000e-1"
    - "2.3105857863e-1"
    - "-5.6719367974e-2"
    - "-1.7917869918e-1"
    - "-5.0000000000e-1"
    - "5.6719367974e-2"
  delta_2:
    - "0.0000000000e0"
    - "1.0819767069e0"
    - "-5.6719367974e-2"
    - "-1.7917869918e-1"
    - "-5.0000000000e-1"
    - "5.6719367974e-2"
  delta_3:
    - "0.0000000000e0"
    - "0.0000000000e0"
    - "9.0296552415e-1"
    - "-2.2397337397e-1"
    - "-6.2500000000e-1"
    - "9.7386473411e-1"
  delta_4:
    - "0.0000000000e0"
    - "0.0000000000e0"
    - "0.0000000000e0"
    - "9.1205732642e-1"
    - "-3.7500000000e-1"
    - "0.0000000000e0"
  mu:
    - "-5.0000000000e-1"
    - "-2.3105857863e-1"
    - "5.6719367974e-2"
    - "1.7917869918e-1"
    - "5.0000000000e-1"
    - "-5.6719367974e-2"
weights:
  delta_1:
    - "2.8573881483e-1"
    - "3.1469545969e-1"
    - "3.1677821401e-1"
    - "3.1232373786e-1"
    - "2.8685840775e-1"
    - "3.1646522417e-1"
  delta_2:
    - "3.1570370223e-1"
    - "4.2911902513e-1"
    - "4.4010672457e-1"
    - "4.1036248434e-1"
    - "3.4755645145e-1"
    - "4.3506883628e-1"
  delta_3:
    - "1.8923692267e-1"
    - "3.8337921476e-1"
    - "4.8982925409e-1"
    - "5.9239054890e-1"
    - "5.7224710958e-1"
    - "5.3498195845e-1"
  delta_4:
    - "4.8161979174e-2"
    - "1.1193166790e-1"
    - "1.5900220072e-1"
    - "2.3229371570e-1"
    - "2.6652025328e-1"
    - "1.8454372669e-1"
  mu:
    - "2.8573881483e-1"
    - "3.1469545969e-1"
    - "3.1677821401e-1"
    - "3.1232373786e-1"
    - "2.8685840775e-1"
    - "3.1646522417e-1"
